# investorzilla

./: .gitignore  Makefile  README.md  app-credentials-for-google-sheets.json  investor_ui.py  investor_ui_config.example.py  investor_ui_config.example.yaml  investorzilla_ui.py  pyproject.toml  requirements.txt  uninstall-python.org.sh
config_examples/: investorzilla.example.yaml  investorzilla.gsheets.yaml  investorzilla.yaml
investor/: __init__.py  datacache.py  fund.py  google_sheets.py  investor.py  monetary_time_series.py  portfolio.py
investor/currency/: brasil_banco_central.py  cryptocompare.py
investor/marketindex/: brasil_banco_central.py  federal_reserve.py  yahoo_finance.py
investor/portfolios/: google_sheets.py  uri.py
investorzilla/: __init__.py  __main__.py  datacache.py  fund.py  investor.py  investorzilla_ui.py  monetary_time_series.py  portfolio.py  streamlit_ui.py
investorzilla/currency/: brasil_banco_central.py  cryptocompare.py
investorzilla/marketindex/: alphavantage.py  brasil_banco_central.py  federal_reserve.py  yahoo_finance.py
investorzilla/portfolios/: google_sheets.py  uri.py
notebooks/: investor.ipynb
