[project]
name = "investorzilla"
version = '3.3'
description = "Manage your investments like a data scientist"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Avi Alkalay", email = "avi@unix.sh" },
]

keywords = [
    "investments",
]

dependencies = [
    "pandas>=2",
    "pandas_datareader",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "sqlalchemy",
    "matplotlib",
    "certifi",
    "pyaml",
    "streamlit",
]

# dynamic = [
#     "version",
# ]

classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.setuptools.package-data]
"investorzilla.portfolios" = ["app-credentials-for-google-sheets.json"]

[project.scripts]
investorzilla = "investorzilla.__main__:main"

[project.urls]
Homepage = "https://github.com/avibrazil/investorzilla"
Source = "https://github.com/avibrazil/investorzilla"
Issues = "https://github.com/avibrazil/investorzilla/issues/new/choose"
Pypi = "https://pypi.org/project/investorzilla"

[project.optional-dependencies]
docs = [
    "streamlit",
]

[tool.setuptools.package-dir]
investorzilla = "investorzilla"
